--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "build": "eleventy"
+    "build": "eleventy --input=./src --output=_site"
   },
   "devDependencies": {
     "bun-types": "latest",
