--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -34,6 +34,7 @@ jobs:
       - uses: oven-sh/setup-bun@v1
       - run: bun install
       - run: bun run build
+      - run: bun run index.ts --ws wss://api.phala.network/ws --http
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
