--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
     "build": "eleventy --input=./src --output=_site"
   },
   "devDependencies": {
-    "bun-types": "latest",
-    "@11ty/eleventy": "^2.0.1"
+    "@11ty/eleventy": "^2.0.1",
+    "@types/ramda": "^0.29.9",
+    "bun-types": "latest"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "@phala/sdk": "^0.5.5",
+    "arg": "^5.0.2",
+    "dotenv": "^16.3.1",
+    "ramda": "^0.29.1"
   }
 }
