--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -9,6 +9,9 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+  schedule:
+    - cron: "*/5 * * * *"
+
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
@@ -33,8 +36,8 @@ jobs:
         uses: actions/checkout@v3
       - uses: oven-sh/setup-bun@v1
       - run: bun install
-      - run: bun run build
       - run: bun run index.ts --ws wss://api.phala.network/ws --http
+      - run: bun run build
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
