--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@phala/sdk": "^0.5.5",
+    "@phala/sdk": "latest",
     "arg": "^5.0.2",
     "dotenv": "^16.3.1",
     "ramda": "^0.29.1"
